@@ -58,6 +58,7 @@ TODO: logging?
         - add tests for all supported event loops, conditional on PERL_ANYEVENT_LOOP_TESTS.
         - add t/80_ssltext.t.
         - no longer use AUTOLOAD for the initial loading (for no very good reason).
+        - tcp_server now tries to unlink unix domain sockets when it gets destroyed.
 
 5.34  Thu May 12 09:59:41 CEST 2011
 	- AE::TLS didn't support both cert_file and key at the same time,
